Fix the create user account form header horizontal margin on narrow #2551

--- a/src/html-pages/create-user-account-form-page/_index.scss
+++ b/src/html-pages/create-user-account-form-page/_index.scss
@@ -37,6 +37,7 @@
 }
 
 .create-user-account-form {
+  @include layout.allow-edge-to-edge-content-when-narrow();
   @include card.basics();
 }
 
